<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/menu_first_item" android:icon="@drawable/ic_baseline_home_24" android:title="@string/menu_item_1" android:enabled="true" />
    <item android:id="@+id/menu_second_item" android:icon="@drawable/ic_baseline_add_circle_24" android:title="@string/menu_item_2" android:enabled="true"/>
    <item android:id="@+id/menu_third_item" android:icon="@drawable/ic_baseline_add_box_24" android:title="@string/menu_item_3" android:enabled="true"/>
    <item android:id="@+id/menu_forth_item" android:icon="@drawable/ic_baseline_security_24" android:title="@string/menu_item_4" android:enabled="true"/>
    <item android:id="@+id/menu_fifth_item" android:icon="@drawable/ic_baseline_report_problem_24" android:title="@string/menu_item_5" android:enabled="true"/>

</menu>