<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:checkable="true"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginHorizontal="15dp"
        app:cardBackgroundColor="#e9f7ef"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:strokeWidth="4dp"
        app:strokeColor="@color/white"
        app:cardElevation="4dp"
        app:cardCornerRadius="35dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/description1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text1"
                android:textSize="12pt"
                android:textColor="#1146c2"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="100dp"
                android:layout_marginStart="100dp" />

            <ImageView
                android:id="@+id/image_of_card"
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/my_images"
                android:src="@drawable/ic_baseline_lock_24"
                android:background="#11c2bc"
                android:layout_marginTop="25dp"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp" />

            <TextView
                android:id="@+id/money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text2"
                android:textSize="12pt"
                android:textColor="#1146c2"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="290dp"
                android:layout_marginStart="290dp"
                />

            <TextView
                android:id="@+id/description2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text3"
                android:textSize="8pt"
                android:textColor="#1146c2"
                android:layout_marginTop="50dp"
                android:layout_marginStart="100dp"
                android:layout_marginLeft="100dp" />

        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>